Updated example files and added functionality

--- a/dbg/examples/example_1.ipynb
+++ b/dbg/examples/example_1.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = dbg.binding_box('1a52.pdb')"
+    "box = dbg.binding_box('pdb_files/1a52.pdb')"
    ]
   },
   {
