--- a/dbg/examples/example_1.ipynb
+++ b/dbg/examples/example_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "da0f0c34",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "551c4425",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "71aa5bb7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
+   "id": "d0d598e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TYPE</th>\n",
+       "      <th>SERIAL_NUM</th>\n",
+       "      <th>ELEMENT</th>\n",
+       "      <th>AA</th>\n",
+       "      <th>CHAIN_ID</th>\n",
+       "      <th>RESIDUE_NUM</th>\n",
+       "      <th>X_COOR</th>\n",
+       "      <th>Y_COOR</th>\n",
+       "      <th>Z_COOR</th>\n",
+       "      <th>OCCUPANCY</th>\n",
+       "      <th>TEMP_FACTOR</th>\n",
+       "      <th>ELEMENT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3825</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3828</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107.008</td>\n",
+       "      <td>15.860</td>\n",
+       "      <td>99.456</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.94</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3826</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3829</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.932</td>\n",
+       "      <td>16.930</td>\n",
+       "      <td>100.366</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.69</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3827</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3830</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.833</td>\n",
+       "      <td>18.229</td>\n",
+       "      <td>99.892</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.02</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3828</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>O3</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.801</td>\n",
+       "      <td>19.239</td>\n",
+       "      <td>100.813</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.45</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3829</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3832</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.793</td>\n",
+       "      <td>18.503</td>\n",
+       "      <td>98.487</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.12</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3830</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3833</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.876</td>\n",
+       "      <td>17.424</td>\n",
+       "      <td>97.544</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.33</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3831</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3834</td>\n",
+       "      <td>C6</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.938</td>\n",
+       "      <td>17.714</td>\n",
+       "      <td>96.043</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.47</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3832</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3835</td>\n",
+       "      <td>C7</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107.309</td>\n",
+       "      <td>16.503</td>\n",
+       "      <td>95.165</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.66</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3833</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3836</td>\n",
+       "      <td>C8</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.672</td>\n",
+       "      <td>15.191</td>\n",
+       "      <td>95.681</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.82</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3834</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3837</td>\n",
+       "      <td>C9</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107.190</td>\n",
+       "      <td>14.870</td>\n",
+       "      <td>97.123</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>44.99</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3835</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3838</td>\n",
+       "      <td>C10</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.998</td>\n",
+       "      <td>16.065</td>\n",
+       "      <td>98.050</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.58</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3836</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3839</td>\n",
+       "      <td>C11</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.590</td>\n",
+       "      <td>13.552</td>\n",
+       "      <td>97.642</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.46</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3837</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3840</td>\n",
+       "      <td>C12</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.782</td>\n",
+       "      <td>12.364</td>\n",
+       "      <td>96.667</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.93</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3838</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3841</td>\n",
+       "      <td>C13</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.322</td>\n",
+       "      <td>12.668</td>\n",
+       "      <td>95.240</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.73</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3839</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3842</td>\n",
+       "      <td>C14</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107.020</td>\n",
+       "      <td>13.991</td>\n",
+       "      <td>94.766</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.06</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3840</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3843</td>\n",
+       "      <td>C15</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.743</td>\n",
+       "      <td>14.016</td>\n",
+       "      <td>93.262</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>46.15</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3841</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3844</td>\n",
+       "      <td>C16</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.965</td>\n",
+       "      <td>12.544</td>\n",
+       "      <td>92.837</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>47.09</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3842</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3845</td>\n",
+       "      <td>C17</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.876</td>\n",
+       "      <td>11.691</td>\n",
+       "      <td>94.171</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>47.06</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3843</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3846</td>\n",
+       "      <td>O17</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.197</td>\n",
+       "      <td>10.417</td>\n",
+       "      <td>93.968</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>47.62</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3844</th>\n",
+       "      <td>HETATM</td>\n",
+       "      <td>3847</td>\n",
+       "      <td>C18</td>\n",
+       "      <td>EST</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104.760</td>\n",
+       "      <td>12.691</td>\n",
+       "      <td>95.140</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>47.31</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        TYPE SERIAL_NUM ELEMENT   AA CHAIN_ID RESIDUE_NUM   X_COOR  Y_COOR  \\\n",
+       "3825  HETATM       3828      C1  EST        A           1  107.008  15.860   \n",
+       "3826  HETATM       3829      C2  EST        A           1  106.932  16.930   \n",
+       "3827  HETATM       3830      C3  EST        A           1  106.833  18.229   \n",
+       "3828  HETATM       3831      O3  EST        A           1  106.801  19.239   \n",
+       "3829  HETATM       3832      C4  EST        A           1  106.793  18.503   \n",
+       "3830  HETATM       3833      C5  EST        A           1  106.876  17.424   \n",
+       "3831  HETATM       3834      C6  EST        A           1  106.938  17.714   \n",
+       "3832  HETATM       3835      C7  EST        A           1  107.309  16.503   \n",
+       "3833  HETATM       3836      C8  EST        A           1  106.672  15.191   \n",
+       "3834  HETATM       3837      C9  EST        A           1  107.190  14.870   \n",
+       "3835  HETATM       3838     C10  EST        A           1  106.998  16.065   \n",
+       "3836  HETATM       3839     C11  EST        A           1  106.590  13.552   \n",
+       "3837  HETATM       3840     C12  EST        A           1  106.782  12.364   \n",
+       "3838  HETATM       3841     C13  EST        A           1  106.322  12.668   \n",
+       "3839  HETATM       3842     C14  EST        A           1  107.020  13.991   \n",
+       "3840  HETATM       3843     C15  EST        A           1  106.743  14.016   \n",
+       "3841  HETATM       3844     C16  EST        A           1  106.965  12.544   \n",
+       "3842  HETATM       3845     C17  EST        A           1  106.876  11.691   \n",
+       "3843  HETATM       3846     O17  EST        A           1  106.197  10.417   \n",
+       "3844  HETATM       3847     C18  EST        A           1  104.760  12.691   \n",
+       "\n",
+       "       Z_COOR OCCUPANCY TEMP_FACTOR ELEMENT  \n",
+       "3825   99.456      1.00       45.94       C  \n",
+       "3826  100.366      1.00       45.69       C  \n",
+       "3827   99.892      1.00       46.02       C  \n",
+       "3828  100.813      1.00       46.45       O  \n",
+       "3829   98.487      1.00       46.12       C  \n",
+       "3830   97.544      1.00       46.33       C  \n",
+       "3831   96.043      1.00       46.47       C  \n",
+       "3832   95.165      1.00       46.66       C  \n",
+       "3833   95.681      1.00       45.82       C  \n",
+       "3834   97.123      1.00       44.99       C  \n",
+       "3835   98.050      1.00       45.58       C  \n",
+       "3836   97.642      1.00       45.46       C  \n",
+       "3837   96.667      1.00       45.93       C  \n",
+       "3838   95.240      1.00       46.73       C  \n",
+       "3839   94.766      1.00       46.06       C  \n",
+       "3840   93.262      1.00       46.15       C  \n",
+       "3841   92.837      1.00       47.09       C  \n",
+       "3842   94.171      1.00       47.06       C  \n",
+       "3843   93.968      1.00       47.62       O  \n",
+       "3844   95.140      1.00       47.31       C  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ligand_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "5223ccc1",
    "metadata": {},
    "outputs": [],
@@ -43,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "30a0252d",
    "metadata": {},
    "outputs": [
@@ -53,7 +454,7 @@
        "array([ 6., 23., 21.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "c6d06ff9",
    "metadata": {},
    "outputs": [
@@ -74,7 +475,7 @@
        "array([106.73025,  15.0231 ,  96.61565])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "399ff712",
    "metadata": {},
    "outputs": [],
@@ -95,14 +496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "dc1046a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8f8aef9d91c4f8bb3371840bf90d473",
+       "model_id": "af3c8050ff6e415984c56ec5aaad9f17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,6 +518,14 @@
    "source": [
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f45659",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
