--- a/dbg/examples/example_2.ipynb
+++ b/dbg/examples/example_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "381258c7",
+   "id": "0269b905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "56fa1ab5",
+   "id": "7c3f27a6",
    "metadata": {},
    "outputs": [
     {
@@ -370,12 +370,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2eedd3f",
+   "metadata": {},
+   "source": [
+    "## Adjusting box size manually"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59b80a8d",
+   "execution_count": 95,
+   "id": "bc9b31ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "box_size_2 = np.array([30, 32, 33])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "9f0eb98d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_2 = box.show_result(centroid, box_size_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "620bcb47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "992467f1fa434ce0a4fe1f57fa21d074",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "result_2"
+   ]
   }
  ],
  "metadata": {
