Added a few tests and updated example 2

--- a/dbg/examples/example_2.ipynb
+++ b/dbg/examples/example_2.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = binding_box('pdb_files/8dz9.pdb')"
+    "box = dbg.binding_box('pdb_files/8dz9.pdb')"
    ]
   },
   {
