--- a/dbg/examples/example_3.ipynb
+++ b/dbg/examples/example_3.ipynb
@@ -10,58 +10,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "da0f0c34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "31e0c5ebcf984b47b1c06c84075acab4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from dbg import dbg\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from vina import Vina"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "551c4425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "box = dbg.binding_box('pdb_files/1a52.pdb')"
+    "box = dbg.binding_box('pdb_files/1iep.pdb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "71aa5bb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ligand_data = box.get_ligand_data('EST', 'A')"
+    "ligand_data = box.get_ligand_data('STI', 'A')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "5223ccc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "centroid, box_size = box.create_box(spacing=0.375, padding=np.array([0, 0, 0]))"
+    "centroid, box_size = box.create_box(spacing=0.375, padding=np.array([10, 5, 5]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "30a0252d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6., 23., 21.])"
+       "array([33., 49., 41.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "c6d06ff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([106.73025,  15.0231 ,  96.61565])"
+       "array([15.61389189, 53.38013514, 15.45483784])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "399ff712",
    "metadata": {},
    "outputs": [],
@@ -103,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "dc1046a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8f8aef9d91c4f8bb3371840bf90d473",
+       "model_id": "230fb9a8537b49dcb77c696dc43629d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,6 +146,89 @@
    "source": [
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b145894b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = Vina(sf_name='vina')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d19b3454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.set_receptor('pdbqt_files/1iep_receptor.pdbqt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3a6d601b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.set_ligand_from_file('pdbqt_files/1iep_ligand.pdbqt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "575ebf9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score before minimization: 0.000 (kcal/mol)\n",
+      "Score after minimization : 0.000 (kcal/mol)\n",
+      "Computing Vina grid ... done.\n",
+      "Performing local search ... done.\n",
+      "Performing docking (random seed: -573072596) ... \n",
+      "0%   10   20   30   40   50   60   70   80   90   100%\n",
+      "|----|----|----|----|----|----|----|----|----|----|\n",
+      "***************************************************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Search space volume is greater than 27000 Angstrom^3 (See FAQ)\n"
+     ]
+    }
+   ],
+   "source": [
+    "v.compute_vina_maps(center=centroid, box_size=box_size)\n",
+    "\n",
+    "# Score the current pose\n",
+    "energy = v.score()\n",
+    "print('Score before minimization: %.3f (kcal/mol)' % energy[0])\n",
+    "\n",
+    "# Minimized locally the current pose\n",
+    "energy_minimized = v.optimize()\n",
+    "print('Score after minimization : %.3f (kcal/mol)' % energy_minimized[0])\n",
+    "v.write_pose('1iep_ligand_minimized.pdbqt', overwrite=True)\n",
+    "\n",
+    "# Dock the ligand\n",
+    "v.dock(exhaustiveness=8, n_poses=5)\n",
+    "v.write_poses('pdbqt_files/1iep_ligand_vina_out.pdbqt', n_poses=5, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "680ab491",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
