--- a/dbg/examples/example_4.ipynb
+++ b/dbg/examples/example_4.ipynb
@@ -5,7 +5,7 @@
    "id": "4b88d19f",
    "metadata": {},
    "source": [
-    "# Example to highlight integration with DeepChem and its docking functionality."
+    "# Example to highlight integration with AutoDock Vina."
    ]
   },
   {
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e91a1867cb5432da4ba6d237b90942e",
+       "model_id": "5bb8e0b460f04dfca80173835762e6ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,97 +36,34 @@
    ],
    "source": [
     "from dbg import dbg\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from vina import Vina"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7dd64b5",
+   "id": "551c4425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import deepchem as dc\n",
-    "from simtk.openmm.app import PDBFile\n",
-    "from pdbfixer import PDBFixer\n",
-    "from deepchem.utils.vina_utils import prepare_inputs\n",
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import AllChem"
+    "box = dbg.binding_box('pdb_files/7uty.pdb')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "241a223b",
+   "id": "71aa5bb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdbid = '7uty'\n",
-    "ligand = 'CC12CCC3C(C1CCC2O)CCC4=C3C=CC(=C4)O'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "926b22e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_27608/3369628443.py:7: DeprecationWarning: Call to deprecated function prepare_inputs. Please use the corresponding function in deepchem.utils.docking_utils.\n",
-      "  p, m = prepare_inputs(f'data/{pdbid}.pdb', ligand)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7uty 1039\n"
-     ]
-    }
-   ],
-   "source": [
-    "fixer = PDBFixer(pdbid=pdbid)\n",
-    "PDBFile.writeFile(fixer.topology, fixer.positions, open(f'data/{pdbid}.pdb', 'w'))\n",
-    "\n",
-    "p, m = None, None\n",
-    "# fix protein, optimize ligand geometry, and sanitize molecules\n",
-    "try:\n",
-    "    p, m = prepare_inputs(f'data/{pdbid}.pdb', ligand)\n",
-    "except:\n",
-    "    print(f'{pdbid} failed PDB fixing')\n",
-    "\n",
-    "if p and m:  # protein and molecule are readable by RDKit\n",
-    "    print(pdbid, p.GetNumAtoms())\n",
-    "    Chem.rdmolfiles.MolToPDBFile(p, f'data/{pdbid}.pdb')\n",
-    "    Chem.rdmolfiles.MolToPDBFile(m, f'data/ligand_{pdbid}.pdb')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0ca4f46",
-   "metadata": {},
-   "source": [
-    "## Note: Using the pdb file from PDBfixer has removed non-protein atoms from it, so attempting to get the ligand data after preparing a protein file will not work. Here we use the original pdb file with ligand data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e7cdfac7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "box = dbg.binding_box('pdb_files/7uty.pdb')\n",
     "ligand_data = box.get_ligand_data('OFR', 'A')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2ed6374d",
+   "execution_count": 4,
+   "id": "a71fee0e",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +979,7 @@
        "2170   1.230      1.00       37.08       H  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5223ccc1",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "30a0252d",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1010,7 @@
        "array([30., 31., 29.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c6d06ff9",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1031,7 @@
        "array([10.05290196, -7.4924902 , -2.14672549])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "399ff712",
    "metadata": {},
    "outputs": [],
@@ -1115,14 +1052,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "dc1046a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa8d58591051445cbe15a0b9e57a7d10",
+       "model_id": "447bf018673d47fbb7b1cbf26ccff233",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1140,43 +1077,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "680ab491",
+   "execution_count": 10,
+   "id": "b145894b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vpg = dc.dock.pose_generation.VinaPoseGenerator()"
+    "v = Vina(sf_name='vina')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d19b3454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.set_receptor('pdbqt_files/7uty.pdbqt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3a6d601b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.set_ligand_from_file('pdbqt_files/ligand_7uty.pdbqt')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da4a5441",
+   "id": "575ebf9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing Vina grid ... CPU times: user 1min 21s, sys: 871 ms, total: 1min 21s\n",
-      "Wall time: 15.6 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jamshedu/miniconda3/envs/msse-python/lib/python3.9/site-packages/vina/vina.py:260: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  self._voxels = np.ceil(np.array(box_size) / self._spacing).astype(np.int)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done.\n",
-      "Performing docking (random seed: 138895926) ... \n",
+      "Score before minimization: 149.920 (kcal/mol)\n",
+      "Score after minimization : -3.780 (kcal/mol)\n",
+      "Computing Vina grid ... done.\n",
+      "Performing local search ... done.\n",
+      "Performing docking (random seed: -200239081) ... \n",
       "0%   10   20   30   40   50   60   70   80   90   100%\n",
       "|----|----|----|----|----|----|----|----|----|----|\n",
       "***************************************************\n"
@@ -1184,34 +1127,20 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "complexes, scores = vpg.generate_poses(molecular_complex=('data/7uty.pdb', 'data/ligand_7uty.pdb'),  # protein-ligand files for docking,\n",
-    "                                       centroid=centroid,\n",
-    "                                       box_dims=box_size,\n",
-    "                                       out_dir='pdbqt_files',\n",
-    "                                       generate_scores=True\n",
-    "                                      )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1fac0440",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-8.757, -8.091, -7.683, -6.845, -6.824, -6.634, -6.554, -6.519, -5.924]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scores"
+    "v.compute_vina_maps(center=centroid, box_size=box_size)\n",
+    "\n",
+    "# Score the current pose\n",
+    "energy = v.score()\n",
+    "print('Score before minimization: %.3f (kcal/mol)' % energy[0])\n",
+    "\n",
+    "# Minimized locally the current pose\n",
+    "energy_minimized = v.optimize()\n",
+    "print('Score after minimization : %.3f (kcal/mol)' % energy_minimized[0])\n",
+    "v.write_pose('pdbqt_files/7uty_ligand_vina_minimized.pdbqt', overwrite=True)\n",
+    "\n",
+    "# Dock the ligand\n",
+    "v.dock(exhaustiveness=8, n_poses=5)\n",
+    "v.write_poses('pdbqt_files/7uty_ligand_vina_out.pdbqt', n_poses=5, overwrite=True)"
    ]
   }
  ],
