Added to README.md

--- a/dbg/examples/example_2.ipynb
+++ b/dbg/examples/example_2.ipynb
@@ -2,10 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "0269b905",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ea0bb03725c41db9fbc6928914991eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from dbg import dbg\n",
     "import numpy as np"
@@ -13,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "551c4425",
    "metadata": {},
    "outputs": [],
@@ -23,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "71aa5bb7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "7c3f27a6",
    "metadata": {},
    "outputs": [
@@ -273,7 +293,7 @@
        "[68 rows x 12 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "5223ccc1",
    "metadata": {},
    "outputs": [],
@@ -294,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "30a0252d",
    "metadata": {},
    "outputs": [
@@ -304,7 +324,7 @@
        "array([25., 32., 23.])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "c6d06ff9",
    "metadata": {},
    "outputs": [
@@ -325,7 +345,7 @@
        "array([-36.33763235, -21.85095588, -55.56345588])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "399ff712",
    "metadata": {},
    "outputs": [],
@@ -346,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "dc1046a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7124daee76024c9bafab45d54327d3c2",
+       "model_id": "340a5a84fcf345caa85fdf0b11a5e479",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "bc9b31ee",
    "metadata": {},
    "outputs": [],
@@ -389,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "9f0eb98d",
    "metadata": {},
    "outputs": [],
@@ -399,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "620bcb47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "992467f1fa434ce0a4fe1f57fa21d074",
+       "model_id": "7480fb8514a54265af8e186a559a9c1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,6 +441,14 @@
    "source": [
     "result_2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2339695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
