--- a/dbg/examples/example_5.ipynb
+++ b/dbg/examples/example_5.ipynb
@@ -5,7 +5,7 @@
    "id": "c74761a4",
    "metadata": {},
    "source": [
-    "# Example showing how multiple molecules of interest on the same chain can cause failures."
+    "# Example showing how multiple identical molecules of interest on the same chain can cause failures."
    ]
   },
   {
